@@ -263,6 +263,11 @@
 ** tipo: colore
 ** valori: un nome colore di WeeChat (default, black, (dark)gray, white, (light)red, (light)green, brown, yellow, (light)blue, (light)magenta, (light)cyan), un numero colore del terminale o un alias; attributi consentiti prima del colore (solo per il colore del testo, non lo sfondo): "*" per il grassetto, "!" per l'inverso, "_" per la sottolineatura (valore predefinito: `default`)
 
+* [[option_weechat.completion.base_word_until_cursor]] *weechat.completion.base_word_until_cursor*
+** descrizione: `if enabled, the base word to complete ends at char before cursor; otherwise the base word ends at first space after cursor`
+** tipo: bool
+** valori: on, off (valore predefinito: `on`)
+
 * [[option_weechat.completion.default_template]] *weechat.completion.default_template*
 ** descrizione: `modello di completamento predefinito (consulta la documentazione per codici e valori del template)`
 ** tipo: stringa
